--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
   <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
     <h1 class="display-4 fw-normal text-body-emphasis">Karachi</h1>
+  <img width="48" height="48" src="https://img.icons8.com/color/48/partly-cloudy-day--v1.png" alt="partly-cloudy-day--v1"/>
     <h1 class="display-4 fw-normal text-body-emphasis"><span id="temp"><b></b></span>°C</h1>
     <h2>Feels Like <span id="feels_like"></span>°C</h2>
 
