--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
         <div class="card mb-4">
           <div class="card-header py-3">
             <h4 class="my-0 fw-normal">Wind situation</h4>
+            <img width="48" height="48" src="https://img.icons8.com/color/48/windsock--v1.png" alt="windsock--v1"/>
           </div>
           <div class="card-body">
           
