--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     </symbol>
   </svg>
 
-  <div class="container py-3">
+  <div class="container py-3" style="background-color: rgba(19, 75, 124, 0.396);color: rgba(255, 255, 255, 0.647);opacity: 90%;"><center>Daniyal Weather Forecast</center></div>
     <header>
-      <h2>Daniyal Weather Forecast</h2>
+     
 
 
 
